# transcriber

./: .gitignore  README.md  downloader.py  main.py  package-lock.json  package.json  pyproject.toml  setup.sh
.cursor/rules/: python.mdc
notebooks/: basic_demo.py  demo.py
scripts/: PRD.txt
src/transcriber/: __init__.py  base.py  main.py  whisper_service.py
src/video2text/: __init__.py  whisper_service.py
transcriber/: __init__.py  downloader.py  main.py  whisper_service.py
