[project]
name = "transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.14.9",
    "openai-whisper>=20250625",
    "yt-dlp>=2025.6.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
