[project]
name = "video2text"
version = "0.1.0"
description = "A command-line tool to transcribe audio from YouTube and other sources using Whisper."
authors = [
    {name = "Thaddeus Low", email = "thaddeuslow@outlook.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
    "marimo>=0.14.9",
    "openai-whisper>=20250625",
    "twine>=6.1.0",
    "yt-dlp>=2025.6.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
